fix monitor styles, add screenshot anonym and fix screenshot rect

--- a/src/app/components/main/monitor/monitor.component.html
+++ b/src/app/components/main/monitor/monitor.component.html
@@ -20,18 +20,23 @@
     </app-team>
   </p-card>
   <p-card id="monitor-friendly" class="no-padding" [class.high-contrast-mode]="settingsService.form.monitorConfig.highContrastMode.model">
-    <ng-container *ngFor="let player of matchInfo.friendly; let l = last; let f = first;">
-      <app-player [playerInput]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="player-card" [last]="l" [first]="f">
-      </app-player>
-      <hr class="player-seperator" *ngIf="!l"/>
-    </ng-container>
+    <div class="p-d-flex p-flex-grow p-flex-column">
+      <ng-container *ngFor="let player of matchInfo.friendly; let l = last; let f = first; let i = index;">
+        <app-player [playerInput]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="player-card" [last]="l" [first]="f" [index]="i">
+        </app-player>
+        <hr class="player-seperator" *ngIf="!l"/>
+      </ng-container>
+    </div>
+
   </p-card>
   <p-card id="monitor-enemy" class="no-padding" [class.high-contrast-mode]="settingsService.form.monitorConfig.highContrastMode.model">
-    <ng-container *ngFor="let player of matchInfo.enemy; let l = last; let f = first;">
-      <app-player [playerInput]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="player-card" [last]="l" [first]="f">
-      </app-player>
-      <hr class="player-seperator" *ngIf="!l"/>
-    </ng-container>
+    <div class="p-d-flex p-flex-grow p-flex-column">
+      <ng-container *ngFor="let player of matchInfo.enemy; let l = last; let f = first; let i = index;">
+        <app-player [playerInput]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="player-card" [last]="l" [first]="f" [index]="i">
+        </app-player>
+        <hr class="player-seperator" *ngIf="!l"/>
+      </ng-container>
+    </div>
   </p-card>
 
   <p-contextMenu #contextMenu styleClass="custom-contextmenu" appendTo="body" triggerEvent="ignore" [global]="true"
