--- a/src/app/components/main/topbar/menu/menu.component.html
+++ b/src/app/components/main/topbar/menu/menu.component.html
@@ -21,13 +21,17 @@
       </ul>
     </div>
   </div>
-  <div class="p-d-flex p-ai-center p-jc-center p-pb-4">
-    <div>
-      <button pButton [label]="'identity.labels.login' | translate" icon="pi pi-sign-in" (click)="selectingRegion = true"
-              *ngIf="!auth.isAuthenticated"></button>
-      <span *ngIf="auth.isAuthenticated">
-        <img style="height: 1.2rem;" class="p-mr-1" src="assets/region-{{auth.userInfo.region}}.svg"/> {{auth.userInfo.username}}
+  <div class="menu-user-section p-d-flex p-ai-center p-jc-center" [class.authenticated]="auth.isAuthenticated">
+    <div class="p-fluid p-flex-grow" *ngIf="!auth.isAuthenticated">
+      <button pButton [label]="'identity.labels.login' | translate" icon="pi pi-sign-in" (click)="selectingRegion = true"></button>
+    </div>
+    <div *ngIf="auth.isAuthenticated" class="p-d-flex p-flex-grow p-ai-center p-jc-between" style="font-size: 1.2rem;min-width: 0"
+         routerLink="/profile" (click)="closeAction()">
+      <span class="p-d-flex p-flex-grow p-ai-center p-mr-1" style="min-width: 0">
+        <img style="height: 2rem;" class="p-mr-2" src="assets/region-{{auth.userInfo.region}}.svg"/>
+        <span style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{{auth.userInfo.username}}</span>
       </span>
+      <i class="pi pi-cog"></i>
     </div>
   </div>
 </div>
@@ -48,7 +52,7 @@
       <img class="region-select-icon" src="assets/region-2.svg" (click)="login($event, 2)"/>
     </div>
     <div class="p-col-12 p-md-6 p-d-flex p-ai-center p-jc-center">
-      <img  class="region-select-icon" src="assets/region-3.svg" (click)="login($event, 3)"/>
+      <img class="region-select-icon" src="assets/region-3.svg" (click)="login($event, 3)"/>
     </div>
   </div>
 </p-blockUI>
