--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -128,7 +128,7 @@ body .p-sidebar {
       }
 
 
-      border-bottom: 1px solid $secondaryColor;
+      border-bottom: 1px solid $secondaryLightColor;
     }
   }
 }
@@ -147,6 +147,19 @@ app-qr-scan {
   display: grid;
   height: 100%;
   grid-template-rows: auto minmax(250px, 1fr);
+}
+
+.menu-user-section{
+  border-top: 1px solid $secondaryLightColor;
+  padding: 1rem;
+  transition: all .3s ease-in-out;
+
+  &.authenticated{
+    cursor: pointer;
+    &:hover{
+      background: $secondaryColor;
+    }
+  }
 }
 
 /* Larger than mobile */
