--- a/src/app/components/main/analytics-info/analytics-info.component.html
+++ b/src/app/components/main/analytics-info/analytics-info.component.html
@@ -1,47 +1,48 @@
 <p *isDesktop>
   This app uses Google Analytics with the <a externalLink
-    href="https://developers.google.com/analytics/devguides/collection/protocol/v1">Measurement Protocol</a>
-  implementation. <br />
-  It is used to track the current users, user actions, the screen size, the app version and errors. <br />
+                                             href="https://developers.google.com/analytics/devguides/collection/protocol/v1">Measurement
+  Protocol</a>
+  implementation. <br/>
+  It is used to track the current users, user actions, the screen size, the app version and errors. <br/>
   Due to not being in your browser it doesn't track anything but the raw data (mentioned above) that i choose to
-  send. <br />
-  <br />
+  send. <br/>
+  <br/>
   None of the collected data is used for anything but statistical analysis and is not send or sold to any other third
-  party.<br />
-  <br />
-  No other personal data is collected, tracked or saved. <br />
-  <br />
+  party.<br/>
+  <br/>
+  No other personal data is collected, tracked or saved. <br/>
+  <br/>
   <strong>If you don't want your IP to be tracked, you can choose to anonymize it. IP tracking is used to approximate
-    your location, mainly county.</strong><br />
-  <br />
+    your location, mainly county.</strong><br/>
+  <br/>
   <strong>If you change your mind, you can always go to the settings and change the option.</strong>
 </p>
 <p *isBrowser>
   This website/app uses Google Analytics with the <a target="_blank" href="https://developers.google.com/gtagjs">gtag.js</a>
-  implementation. <br />
+  implementation. <br/>
   It is used to track the visitor amount, visitor actions, general device information (brand, os, screen size, ...) and
-  errors. <br />
-  Due to being in your browser it also tracks when you came from another page (referer) <br />
-  All demographic and interest reports are disabled.<br />
-  <br />
+  errors. <br/>
+  Due to being in your browser it also tracks when you came from another page (referer) <br/>
+  All demographic and interest reports are disabled.<br/>
+  <br/>
   None of the collected data is used for anything but statistical analysis and is not send or sold to any other third
-  party.<br />
-  <br />
-  No other personal data is collected, tracked or saved. <br />
-  <br />
+  party.<br/>
+  <br/>
+  No other personal data is collected, tracked or saved. <br/>
+  <br/>
   <strong>If you don't want your IP to be tracked, you can choose to anonymize it. IP tracking is used to approximate
-    your location, mainly county.</strong><br />
-  <br />
-  <strong>If you don't want to enable Google Analytics at all, you can also choose to do so.</strong> <br />
-  <br />
+    your location, mainly county.</strong><br/>
+  <br/>
+  <strong>If you don't want to enable Google Analytics at all, you can also choose to do so.</strong> <br/>
+  <br/>
   <strong>If you change your mind, you can always go to the settings and change the options.</strong>
 </p>
-<div class="align-right-wrapper">
-  <p-button *isBrowser [label]="'analytics.disable' | translate" [styleClass]="'p-button-secondary'"
-    (click)="click(1)">
+<div class="p-d-flex p-flex-column p-flex-sm-row p-ai-center p-jc-end">
+  <p-button *isBrowser class="p-mb-2 p-mb-sm-0 p-mr-sm-2" [label]="'analytics.disable' | translate" [styleClass]="'p-button-secondary'"
+            (click)="click(1)">
   </p-button>
-  <p-button [label]="'analytics.anonymize' | translate" [styleClass]="'p-button-secondary'" (click)="click(2)">
+  <p-button class="p-mb-2 p-mb-sm-0 p-mr-sm-2"  [label]="'analytics.anonymize' | translate" [styleClass]="'p-button-secondary'" (click)="click(2)">
   </p-button>
-  <p-button [label]="'analytics.okButton' | translate" [styleClass]="'p-button-success'" (click)="click(3)">
+  <p-button class="p-mb-2 p-mb-sm-0"  [label]="'analytics.okButton' | translate" [styleClass]="'p-button-success'" (click)="click(3)">
   </p-button>
 </div>
