--- a/src/app/components/main/monitor/monitor.component.html
+++ b/src/app/components/main/monitor/monitor.component.html
@@ -11,12 +11,16 @@
 <div class="container {{$fontSizeClass | async}}" *ngIf="signalrService.$info | async;let matchInfo" #container
      (click)="$event.preventDefault();$event.stopPropagation()">
   <p-card id="monitor-friendly-clan" class="no-padding">
-    <app-team [clan]="matchInfo.friendlyClan" [averages]="[matchInfo.friendlyTeam, matchInfo.friendlyTeamSolo]" [cw]="matchInfo.matchGroup == 'CLAN'">
+    <app-team class="p-d-flex p-flex-grow p-flex-column"
+              [clan]="matchInfo.friendlyClan" [averages]="[matchInfo.friendlyTeam, matchInfo.friendlyTeamSolo]"
+              [cw]="matchInfo.matchGroup == 'CLAN'">
     </app-team>
   </p-card>
   <p-card id="monitor-enemy-clan" class="no-padding"
           *ngIf="matchInfo.matchGroup != 'COOPERATIVE' && matchInfo.matchGroup != 'PVE'">
-    <app-team [clan]="matchInfo.enemyClan" [averages]="[matchInfo.enemyTeam, matchInfo.enemyTeamSolo]" [cw]="matchInfo.matchGroup == 'CLAN'">
+    <app-team class="p-d-flex p-flex-grow p-flex-column"
+              [clan]="matchInfo.enemyClan" [averages]="[matchInfo.enemyTeam, matchInfo.enemyTeamSolo]"
+              [cw]="matchInfo.matchGroup == 'CLAN'">
     </app-team>
   </p-card>
   <p-card id="monitor-friendly" class="no-padding" [class.high-contrast-mode]="settingsService.form.monitorConfig.highContrastMode.model">
