--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -38,6 +38,12 @@ h4 {
   margin-top: 0;
 }
 
+hr{
+  border-color: $secondaryLightColor;
+  margin: 0;
+  border-style: solid;
+}
+
 body {
   background-color: $secondaryColor;
   padding: 0;
@@ -111,6 +117,10 @@ input[readonly].file-input {
   span {
     font-size: 1.5rem;
   }
+}
+
+.p-dark-text{
+  color: $primaryTextColor;
 }
 
 .floating-buttons {
