--- a/src/app/components/main/monitor/team/team-overlay/team-overlay-rating/team-overlay-rating.component.html
+++ b/src/app/components/main/monitor/team/team-overlay/team-overlay-rating/team-overlay-rating.component.html
@@ -1,13 +1,29 @@
 <div class="p-col-12 p-d-flex p-ai-center">
   <img style="height: 2rem" class="team p-mr-2" src="assets/team-{{rating.teamNumber}}.svg"/>
-  <strong [ngStyle]="{ color: rating.color }">{{ rating.teamNumber == 0 ? 'Alpha' : 'Bravo' }}</strong>
+  <div [ngStyle]="{ color: rating.color }">
+    <strong class="p-mr-1" >{{ rating.teamNumber == 0 ? 'Alpha' : 'Bravo' }}</strong>
+    <i *ngIf="leading"class="pi pi-star"></i>
+  </div>
+
+</div>
+<div class="p-col-12 p-d-flex p-ai-center p-jc-start">
+  <span class="p-d-flex p-ai-center p-mr-3">
+    <img src="assets/globe.svg" style="height: 1.3rem" class="p-mr-1">
+    <span>#{{rating.globalRank}}</span>
+  </span>
+  <span class="p-d-flex p-ai-center">
+    <img src="assets/region-{{region}}.svg" style="height: 1.3rem" class="p-mr-1"/>
+    <span>#{{rating.rank}}</span>
+  </span>
 </div>
 <div class="p-d-flex p-flex-column p-col-6">
+
   <span>{{ 'monitor.labels.league' | translate }}</span>
   <span>{{ 'monitor.labels.division' | translate }}</span>
   <span>{{ 'monitor.labels.points' | translate }}</span>
   <span>{{ 'monitor.labels.battles' | translate }}</span>
   <span>{{ 'monitor.labels.wins' | translate }}</span>
+  <span>{{ 'monitor.labels.winrate' | translate }}</span>
   <span>{{ 'monitor.labels.longestStreak' | translate }}</span>
   <span>{{ 'monitor.labels.streak' | translate}}</span>
 </div>
@@ -17,6 +33,8 @@
   <span>{{ rating.publicRating }}</span>
   <span>{{ rating.battlesCount }}</span>
   <span>{{ rating.winsCount }}</span>
+  <span>{{ (rating.winsCount / rating.battlesCount * 100) | number:'0.0-2'}}%</span>
   <span>{{ rating.longestWinningStreak }}</span>
   <span>{{ rating.currentWinningStreak }}</span>
+
 </div>
