--- a/src/app/components/main/monitor/monitor.component.html
+++ b/src/app/components/main/monitor/monitor.component.html
@@ -8,7 +8,7 @@
   </button>
 </div>
 
-<div class="container {{$fontSizeClass | async}}" *ngIf="signalrService.$info | async;let matchInfo" #container
+<div class="container {{$fontSizeClass | async}}" *ngIf="signalrService.info$ | async;let matchInfo" #container
      (click)="$event.preventDefault();$event.stopPropagation()">
   <p-card id="monitor-friendly-clan" class="no-padding">
     <app-team class="p-d-flex p-flex-grow p-flex-column"
@@ -49,12 +49,12 @@
 </div>
 
 
-<div *ngIf="!(signalrService.$info | async)" class="p-d-flex p-flex-grow p-ai-center p-jc-center">
+<div *ngIf="!(signalrService.info$ | async)" class="p-d-flex p-flex-grow p-ai-center p-jc-center">
   <span style="font-size: 1.5rem" *isDesktop>
     <fa-icon [icon]="faWifi" [fixedWidth]="true"></fa-icon>&nbsp;{{'monitor.empty' | translate}}
   </span>
   <ng-container *isBrowser>
-    <span style="font-size: 1.5rem" *ngIf="signalrService.$gatewayStatus | async; let status;">
+    <span style="font-size: 1.5rem" *ngIf="signalrService.gatewayStatus$ | async; let status;">
       <span *ngIf="status === 5">
         <fa-icon [icon]="faWifi" [fixedWidth]="true"></fa-icon>&nbsp;{{'monitor.empty' | translate}}
       </span>
