--- a/src/styles/topbar.scss
+++ b/src/styles/topbar.scss
@@ -95,6 +95,20 @@ body .p-sidebar {
   }
 }
 
+.menu-statusbar{
+  cursor: default;
+  background: $secondaryDarkColor;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid $secondaryColor;
+  font-size: .8rem;
+
+  .statusbar-users{
+    fa-icon{
+      color: $dangerColor;
+    }
+  }
+}
+
 .menu-wrapper {
   ul {
     list-style: none;
